# Google-Advent-of-Agents

./: .gitignore  Makefile  README.md  UV_USAGE.md  pyproject.toml
day-01/: README.md
day-02/: README.md
day-02/multi_agent/: research_agent.yaml  root_agent.yaml  summary_agent.yaml
day-02/third_tool_agent/: root_agent.yaml
day-03/my_agent/: agent.py
day-03/third_agent/: agent.py
day-04/: README.md
day-05/: README.md
day-06/: README.md
day-06/deep-search/: Makefile  README.md  pyproject.toml
day-07/: README.md
src/google_advent_of_agents/: __init__.py
