[project]
name = "google-advent-of-agents"
version = "0.1.0"
description = "Google Advent of Agents project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
